Port to 1.21.1
Co-authored-by: TropheusJ <jverrellijr@icloud.com>
Co-authored-by: techno-sam <77073745+techno-sam@users.noreply.github.com>
Co-authored-by: ryanhcode <42245712+ryanhcode@users.noreply.github.com>